Align location label (fixes profile and group directory display)

--- a/theme/neo-gnu/css/display.css
+++ b/theme/neo-gnu/css/display.css
@@ -1162,7 +1162,7 @@ td.entity_profile {
 
 .profile_list .label {
     display: block;
-    margin-left: 59px !important;
+    margin-left: 55px !important;
 }
 
 .profile_list .note {
